
$HEADER$

===========================================================================

This file contains the main features as well as overviews of specific
bug fixes (and other actions) for each version of hwloc since version
0.9.


Version 2.8.0
-------------
* API
  + Add HWLOC_TOPOLOGY_FLAG_NO_DISTANCES, _NO_MEMATTRS and _NO_CPUKINDS
    to reduce the overhead when unneeded.
* Backends
  + Detect heterogeneous caches in hybrid CPUs on MacOS X,
    thanks to Paul Bone for the help.
  + Max frequencies are not ignored on Linux anymore (as in hwloc 2.7.0),
    but they may be slightly adjusted to avoid reporting hybrid CPUs
    because of features such as Intel Turbo Boost Max 3.0.
    - See the documentation of environment variable HWLOC_CPUKINDS_MAXFREQ.


Version 2.7.0
-------------
* Backends
  + Add support for NUMA nodes and caches with more than 64 PUs across
    multiple processor groups on Windows 11 and Windows Server 2022.
  + Group objects are not created for Windows processor groups anymore,
    except if HWLOC_WINDOWS_PROCESSOR_GROUP_OBJS=1 in the environment.
  + Expose "Cluster" group objects on Linux kernel 5.16+ for CPUs
    that share some internal cache or bus. This can be equivalent
    to the L2 Cache level on some platforms (e.g. x86) or a specific
    level between L2 and L3 on others (e.g. ARM Kungpeng 920).
    Thanks to Jonathan Cameron for the help.
    - HWLOC_DONT_MERGE_CLUSTER_GROUPS=1 may be set in the environment
      to prevent these groups from being merged with identical caches, etc.
  + Improve the oneAPI LevelZero backend:
    - Expose subdevices such as "ze0.1" inside root OS devices ("ze0")
      when the hardware contains multiple subdevices.
    - Add many new attributes to describe device type, and the
      numbers of slices, subslices, execution units and threads.
    - Expose the memory information as LevelZeroHBM/DDR/MemorySize infos.
  + Ignore the max frequencies of cores in Linux cpukinds when the