@@ -68,6 +68,10 @@ Memory attribute #1 name `Locality' flags 2
   NUMANode L#1 = 4
 Memory attribute #2 name `Bandwidth' flags 5
 Memory attribute #3 name `Latency' flags 6
+Memory attribute #4 name `ReadBandwidth' flags 5
+Memory attribute #5 name `WriteBandwidth' flags 5
+Memory attribute #6 name `ReadLatency' flags 6
+Memory attribute #7 name `WriteLatency' flags 6
 Topology not from this system
 ** Export to synthetic...
 Package:1 Core:2 [NUMANode(memory=1073741824)] L2Cache:2(size=4194304) PU:2
